In Index file one line of code removed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sam M Samuel</h1>
+    <a>Create</a>
     <h2>Joe M Samuel</h2>
     <h3>Robin&Reuben</h3>
 </body>
